deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbro-sample
  namespace: cloudbro-sample
spec:
  selector: { app: cloudbro-sample }
  ports: [{ name: http, port: 80, targetPort: 80 }]
