deploy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata: { name: cloudbro-sample, namespace: cloudbro-sample }
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`sample.121.78.39.181.sslip.io`)
      kind: Rule
      services:
        - { name: cloudbro-sample, port: 80 }
  tls: { secretName: cloudbro-sample-tls }
